feat: add Airflow service to Docker Compose, health checks for MinIO and Postgres, update .env.example and README

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 SEMANAL_PLANNING.md
 
 ### MinIO ###
-data/minio/
+data/
 
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
