--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,17 @@
 # Rename this file to `.env` and set your own credentials
 
-MINIO_ROOT_USER=user_name
-MINIO_ROOT_PASSWORD=password
+MINIO_ROOT_USER="username"
+MINIO_ROOT_PASSWORD="password"
 
-POSTGRES_USER=username
-POSTGRES_PASSWORD=password
-POSTGRES_DB=database_name
+
+POSTGRES_USER="username"
+POSTGRES_PASSWORD="password"
+POSTGRES_DB="database_name"
+
+
+AIRFLOW_USER="username"
+AIRFLOW_PASSWORD="password"
+AIRFLOW_NAME="name"
+AIRFLOW_LASTNAME="lastname"
+AIRFLOW_ROLE="role"
+AIRFLOW_EMAIL="email@example.com"
