--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,6 +1,6 @@
-# Always recreate docker image to verify dependencies versions
-
+appdirs==1.4.4
 asttokens==3.0.0
+backcall==0.2.0
 beautifulsoup4==4.14.2
 certifi==2025.10.5
 cffi==1.17.1
@@ -12,12 +12,15 @@ decorator==5.2.1
 exceptiongroup==1.3.0
 executing==2.2.1
 frozendict==2.4.6
+html5lib==1.1
 idna==3.11
+importlib_metadata==8.5.0
 ipykernel==6.29.5
 ipython==8.12.3
 jedi==0.19.2
 jupyter_client==8.6.2
 jupyter_core==5.8.0
+lxml==6.0.2
 matplotlib-inline==0.1.6
 multitasking==0.0.12
 nest-asyncio==1.6.0
@@ -27,6 +30,7 @@ pandas==2.0.2
 parso==0.8.5
 peewee==3.18.2
 pexpect==4.9.0
+pickleshare==0.7.5
 platformdirs==4.3.5
 prompt_toolkit==3.0.52
 protobuf==5.29.4
@@ -50,5 +54,7 @@ typing_extensions==4.13.1
 tzdata==2025.2
 urllib3==2.2.2
 wcwidth==0.2.14
+webencodings==0.5.1
 websockets==13.0.1
 yfinance==0.2.66
+zipp==3.20.2
